// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferenceItem renders unlinked reference (no control_number) 1`] = `
<div
  className="ant-list-item"
>
  <Meta
    description={
      <Unknown>
        <AuthorList
          authors={
            Immutable.List [
              Immutable.Map {
                full_name: "Author",
              },
            ]
          }
          enableShowAll={false}
          limit={5}
          recordId={undefined}
          total={-1}
          wrapperClassName={null}
        />
        <PublicationInfoList
          labeled={false}
          publicationInfo={
            Immutable.List [
              Immutable.Map {
                journal_title: "Journal",
              },
            ]
          }
        />
      </Unknown>
    }
    title="Title"
  />
</div>
`;

exports[`ReferenceItem renders with full reference 1`] = `
<div
  className="ant-list-item"
>
  <Meta
    description={
      <Unknown>
        <AuthorList
          authors={
            Immutable.List [
              Immutable.Map {
                full_name: "Author",
              },
            ]
          }
          enableShowAll={false}
          limit={5}
          recordId={12345}
          total={-1}
          wrapperClassName={null}
        />
        <PublicationInfoList
          labeled={false}
          publicationInfo={
            Immutable.List [
              Immutable.Map {
                journal_title: "Journal",
              },
            ]
          }
        />
      </Unknown>
    }
    title={
      <Link
        replace={false}
        to="/literature/12345"
      >
        
         
        <Latex>
          Title
        </Latex>
      </Link>
    }
  />
</div>
`;
